<resources>
    <string name="app_name">Registration App</string>
    <string name="e_mail">E-mail:</string>
    <string name="e_mail1">E-mail</string>
    <string name="name">Name:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="phone">Phone:</string>
    <string name="student_id">Student ID:</string>
    <string name="student_id1">Student ID</string>
    <string name="school">School</string>
    <string name="male">Male</string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_to_adventure_learning_club">welcome to Adventure Learning Club!</string>
    <string name="register">Register</string>
    <string name="school1">School</string>
    <string name="phone1">Phone</string>
</resources>